[gd_scene load_steps=11 format=2]

[ext_resource path="res://Fonts/ShareTechMono-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Images/Blocks/empty_block.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Intro.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 96
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 48
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.627451 )
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color( 0.627451, 0.627451, 0.627451, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.627451 )
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color( 0.501961, 0.501961, 0.501961, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0.627451 )
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color( 0.627451, 0.627451, 0.627451, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 0.627451 )
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color( 0.501961, 0.501961, 0.501961, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 0.627451 )
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color( 1, 1, 1, 1 )

[node name="Intro" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="BackgroundImage" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 2

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.686275 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 32.0
margin_top = 32.0
margin_right = 608.0
margin_bottom = 142.0
custom_fonts/normal_font = SubResource( 1 )
text = "Bouncy Beam"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 64.0
margin_top = 150.0
margin_right = 428.0
margin_bottom = 514.0
custom_constants/separation = 32

[node name="Play" type="Button" parent="VBoxContainer"]
margin_right = 364.0
margin_bottom = 69.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = " Play"
align = 0

[node name="Settings" type="Button" parent="VBoxContainer"]
margin_top = 101.0
margin_right = 364.0
margin_bottom = 170.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = " Settings"
align = 0

[node name="MapEditor" type="Button" parent="VBoxContainer"]
margin_top = 202.0
margin_right = 364.0
margin_bottom = 271.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = " Map Editor"
align = 0

[node name="HelpNAbout" type="Button" parent="VBoxContainer"]
margin_top = 303.0
margin_right = 364.0
margin_bottom = 372.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = " Help & About"
align = 0

[node name="Exit" type="Button" parent="VBoxContainer"]
margin_top = 404.0
margin_right = 364.0
margin_bottom = 473.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = " Exit"
align = 0

[connection signal="button_down" from="VBoxContainer/Play" to="." method="_on_Play_button_down"]
[connection signal="button_down" from="VBoxContainer/Settings" to="." method="_on_Settings_button_down"]
[connection signal="button_down" from="VBoxContainer/MapEditor" to="." method="_on_MapEditor_button_down"]
[connection signal="button_down" from="VBoxContainer/HelpNAbout" to="." method="_on_HelpNAbout_button_down"]
[connection signal="button_down" from="VBoxContainer/Exit" to="." method="_on_Exit_button_down"]
